--- a/code/preprocessing.ipynb
+++ b/code/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,8 @@
     "train_data['Cabin'] = le.fit_transform(train_data['Cabin'])\n",
     "train_data['Embarked'] = le.fit_transform(train_data['Embarked'])\n",
     "test_data['Cabin'] = le.fit_transform(test_data['Cabin'])\n",
-    "\n",
+    "train_data['Sex'] = le.fit_transform(train_data['Sex'])\n",
+    "test_data['Sex'] = le.fit_transform(test_data['Sex'])\n",
     "## 범주형데이터 처리 완료\n",
     "#(참고: https://teddylee777.github.io/scikit-learn/labelencoder-%EC%82%AC%EC%9A%A9%EB%B2%95/)\n",
     "\n",
@@ -53,12 +54,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "training.to_csv('/workspaces/aiprogrammingtitanic/data/training.csv')\n",
-    "validation.to_csv('/workspaces/aiprogrammingtitanic/data/validation.csv')"
+    "validation.to_csv('/workspaces/aiprogrammingtitanic/data/validation.csv')\n",
+    "test_data.to_csv('/workspaces/aiprogrammingtitanic/data/test_data.csv')"
    ]
   }
  ],
