--- a/code/preprocessing.ipynb
+++ b/code/preprocessing.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,6 @@
     "#print(test_data.isnull().sum())\n",
     "\n",
     "## 결측치 해결\n",
-    "\n",
     "## train.csv 를 8:2로 나누어 validation 데이터셋 만들기 \n",
     "#(참고: https://scikit-learn.org/dev/modules/generated/sklearn.model_selection.train_test_split.html#)\n",
     "\n",
@@ -54,13 +53,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "training.to_csv('/workspaces/aiprogrammingtitanic/data/training.csv')\n",
     "validation.to_csv('/workspaces/aiprogrammingtitanic/data/validation.csv')\n",
-    "test_data.to_csv('/workspaces/aiprogrammingtitanic/data/test_data.csv')"
+    "test_data.to_csv('/workspaces/aiprogrammingtitanic/data/training.csv')"
    ]
   }
  ],
