--- a/code/preprocessing.ipynb
+++ b/code/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,22 +44,17 @@
     "#print(train_data.isnull().sum())\n",
     "#print(test_data.isnull().sum())\n",
     "\n",
-    "## 결측치 해결\n",
-    "## train.csv 를 8:2로 나누어 validation 데이터셋 만들기 \n",
-    "#(참고: https://scikit-learn.org/dev/modules/generated/sklearn.model_selection.train_test_split.html#)\n",
-    "\n",
-    "training, validation = train_test_split(train_data, test_size=0.2, random_state=202300698)"
+    "## 결측치 해결"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "training.to_csv('/workspaces/aiprogrammingtitanic/data/training.csv')\n",
-    "validation.to_csv('/workspaces/aiprogrammingtitanic/data/validation.csv')\n",
-    "test_data.to_csv('/workspaces/aiprogrammingtitanic/data/training.csv')"
+    "train_data.to_csv('/workspaces/aiprogrammingtitanic/data/train_data.csv')\n",
+    "test_data.to_csv('/workspaces/aiprogrammingtitanic/data/test_data.csv')"
    ]
   }
  ],
