--- a/code/decisiontree.ipynb
+++ b/code/decisiontree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,8 +10,7 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score\n",
-    "import matplotlib.pyplot as plt"
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score"
    ]
   },
   {
