--- a/code/decisiontree.ipynb
+++ b/code/decisiontree.ipynb
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -482,13 +482,13 @@
    ],
    "source": [
     "# 모델 예측\n",
-    "y_pred = dt_model.predict(X_val)\n",
+    "dt_y_pred = dt_model.predict(X_val)\n",
     "\n",
     "# 성능 평가\n",
-    "accuracy = accuracy_score(y_val, y_pred)\n",
-    "precision = precision_score(y_val, y_pred)\n",
-    "recall = recall_score(y_val, y_pred)\n",
-    "conf_matrix = confusion_matrix(y_val, y_pred)\n",
+    "accuracy = accuracy_score(y_val, dt_y_pred)\n",
+    "precision = precision_score(y_val, dt_y_pred)\n",
+    "recall = recall_score(y_val, dt_y_pred)\n",
+    "conf_matrix = confusion_matrix(y_val, dt_y_pred)\n",
     "\n",
     "# 혼동 행렬\n",
     "print(\"Confusion Matrix:\")\n",
