--- a/code/randomforest.ipynb
+++ b/code/randomforest.ipynb
@@ -455,13 +455,13 @@
     }
    ],
    "source": [
-    "rf = RandomForestClassifier()\n",
-    "rf.fit(X_train, y_train)"
+    "rf_model = RandomForestClassifier()\n",
+    "rf_model.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -479,13 +479,13 @@
    ],
    "source": [
     "# 모델 예측\n",
-    "y_pred = rf.predict(X_val)\n",
+    "rf_y_pred = rf_model.predict(X_val)\n",
     "\n",
     "# 성능 평가\n",
-    "accuracy = accuracy_score(y_val, y_pred)\n",
-    "precision = precision_score(y_val, y_pred)\n",
-    "recall = recall_score(y_val, y_pred)\n",
-    "conf_matrix = confusion_matrix(y_val, y_pred)\n",
+    "accuracy = accuracy_score(y_val, rf_y_pred)\n",
+    "precision = precision_score(y_val, rf_y_pred)\n",
+    "recall = recall_score(y_val, rf_y_pred)\n",
+    "conf_matrix = confusion_matrix(y_val, rf_y_pred)\n",
     "\n",
     "# 혼동 행렬\n",
     "print(\"Confusion Matrix:\")\n",
