--- a/code/preprocessing.ipynb
+++ b/code/preprocessing.ipynb
@@ -13,13 +13,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "PassengerId    0\n",
+      "Survived       0\n",
+      "Pclass         0\n",
+      "Name           0\n",
+      "Sex            0\n",
+      "Age            0\n",
+      "SibSp          0\n",
+      "Parch          0\n",
+      "Ticket         0\n",
+      "Fare           0\n",
+      "Cabin          0\n",
+      "Embarked       0\n",
+      "dtype: int64\n",
+      "PassengerId    0\n",
+      "Pclass         0\n",
+      "Name           0\n",
+      "Sex            0\n",
+      "Age            0\n",
+      "SibSp          0\n",
+      "Parch          0\n",
+      "Ticket         0\n",
+      "Fare           0\n",
+      "Cabin          0\n",
+      "Embarked       0\n",
+      "dtype: int64\n",
       "   PassengerId  Survived  Pclass  \\\n",
       "0            1         0       3   \n",
       "1            2         1       1   \n",
@@ -81,8 +106,8 @@
     "test_data = test_data.fillna(test_data.median(numeric_only=True))\n",
     "\n",
     "#결측치 확인2\n",
-    "#print(train_data.isnull().sum())\n",
-    "#print(test_data.isnull().sum())\n",
+    "print(train_data.isnull().sum())\n",
+    "print(test_data.isnull().sum())\n",
     "\n",
     "## 결측치 해결\n",
     "\n",
