--- a/code/svm.ipynb
+++ b/code/svm.ipynb
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -483,19 +483,19 @@
     "svm_y_pred = svm_model.predict(X_val)\n",
     "\n",
     "# 성능 평가\n",
-    "accuracy = accuracy_score(y_val, svm_y_pred)\n",
-    "precision = precision_score(y_val, svm_y_pred)\n",
-    "recall = recall_score(y_val, svm_y_pred)\n",
-    "f1_score = f1_score(y_val, svm_y_pred)\n",
-    "conf_matrix = confusion_matrix(y_val, svm_y_pred)\n",
+    "svm_accuracy = accuracy_score(y_val, svm_y_pred)\n",
+    "svm_precision = precision_score(y_val, svm_y_pred)\n",
+    "svm_recall = recall_score(y_val, svm_y_pred)\n",
+    "svm_f1_score = f1_score(y_val, svm_y_pred)\n",
+    "svm_conf_matrix = confusion_matrix(y_val, svm_y_pred)\n",
     "\n",
     "# 혼동 행렬\n",
     "print(\"Confusion Matrix:\")\n",
-    "print(conf_matrix)\n",
-    "print(f'Accuracy: {accuracy:.4f}')\n",
-    "print(f'Precision: {precision:.4f}')\n",
-    "print(f'Recall: {recall:.4f}')\n",
-    "print(f'F1 Score: {f1_score:.4f}')"
+    "print(svm_conf_matrix)\n",
+    "print(f'Accuracy: {svm_accuracy:.4f}')\n",
+    "print(f'Precision: {svm_precision:.4f}')\n",
+    "print(f'Recall: {svm_recall:.4f}')\n",
+    "print(f'F1 Score: {svm_f1_score:.4f}')"
    ]
   }
  ],
