add name, fix logisiticregression

--- a/code/finalcode.ipynb
+++ b/code/finalcode.ipynb
@@ -134,6 +134,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\"Decision Tree\"\n",
       "Confusion Matrix:\n",
       "[[80 23]\n",
       " [27 49]]\n",
@@ -159,7 +160,7 @@
     "dt_conf_matrix = confusion_matrix(y_val, dt_y_pred)\n",
     "\n",
     "# 혼동 행렬\n",
-    "print(\"Confusion Matrix:\")\n",
+    "print(\"\\\"Decision Tree\\\"\\nConfusion Matrix:\")\n",
     "print(dt_conf_matrix)\n",
     "print(f'Accuracy: {dt_accuracy:.4f}')\n",
     "print(f'Precision: {dt_precision:.4f}')\n",
@@ -176,6 +177,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\"Support Vector Machine\"\n",
       "Confusion Matrix:\n",
       "[[97  6]\n",
       " [59 17]]\n",
@@ -201,7 +203,7 @@
     "svm_conf_matrix = confusion_matrix(y_val, svm_y_pred)\n",
     "\n",
     "# 혼동 행렬\n",
-    "print(\"Confusion Matrix:\")\n",
+    "print(\"\\\"Support Vector Machine\\\"\\nConfusion Matrix:\")\n",
     "print(svm_conf_matrix)\n",
     "print(f'Accuracy: {svm_accuracy:.4f}')\n",
     "print(f'Precision: {svm_precision:.4f}')\n",
@@ -218,6 +220,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\"Random Forest\"\n",
       "Confusion Matrix:\n",
       "[[83 20]\n",
       " [22 54]]\n",
@@ -245,7 +248,7 @@
     "rf_conf_matrix = confusion_matrix(y_val, rf_y_pred)\n",
     "\n",
     "# 혼동 행렬\n",
-    "print(\"Confusion Matrix:\")\n",
+    "print(\"\\\"Random Forest\\\"\\nConfusion Matrix:\")\n",
     "print(rf_conf_matrix)\n",
     "print(f'Accuracy: {rf_accuracy:.4f}')\n",
     "print(f'Precision: {rf_precision:.4f}')\n",
@@ -255,13 +258,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\"Logistic Regression\"\n",
       "Confusion Matrix:\n",
       "[[88 15]\n",
       " [26 50]]\n",
@@ -270,25 +274,12 @@
       "Recall: 0.6579\n",
       "F1 Score: 0.7092\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/codespace/.local/lib/python3.12/site-packages/sklearn/linear_model/_logistic.py:469: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
-     ]
     }
    ],
    "source": [
     "## Logistic Regression\n",
-    "lr_model = LogisticRegression(random_state=202300698)\n",
+    "lr_model = LogisticRegression(random_state=202300698, max_iter = 500)\n",
+    "#Increase the number of iterations (max_iter) or scale the data as shown in: 메시지가 떠서 max_iter = 500을 추가했습니다.\n",
     "lr_model.fit(X_train, y_train)\n",
     "\n",
     "# 모델 예측\n",
@@ -302,7 +293,7 @@
     "lr_conf_matrix = confusion_matrix(y_val, lr_y_pred)\n",
     "\n",
     "# 혼동 행렬\n",
-    "print(\"Confusion Matrix:\")\n",
+    "print(\"\\\"Logistic Regression\\\"\\nConfusion Matrix:\")\n",
     "print(lr_conf_matrix)\n",
     "print(f'Accuracy: {lr_accuracy:.4f}')\n",
     "print(f'Precision: {lr_precision:.4f}')\n",
