--- a/code/finalcode.ipynb
+++ b/code/finalcode.ipynb
@@ -19,6 +19,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 이름: 박사홍\n",
+    "# 학과: Finance & AI융합학부\n",
+    "# 학년: 2학년\n",
+    "# 학번: 202300698"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -108,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -146,6 +158,8 @@
     }
    ],
    "source": [
+    "##3.2. 분류 수행\n",
+    "\n",
     "##Decision tree\n",
     "\n",
     "dt_model = DecisionTreeClassifier(random_state=202300698)\n",
@@ -300,6 +314,13 @@
     "print(f'Recall: {lr_recall:.4f}')\n",
     "print(f'F1 Score: {lr_f1_score:.4f}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
